syntax = "proto3";

package chat_api_v1;

//import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Shemistan/chat_server/pkg/chat_api_v1;chat_api_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
}

message CreateRequest{
  string chat_name = 1;
  repeated string user_logins = 2;
}

message CreateResponse{
  int64 id = 1;
}

message SendMessageRequest{
  string chat_name = 1;
  string message = 2;
  string user_login = 3;
}

message DeleteChatRequest {
  int64 chat_id = 1;
}